@@ -837,7 +837,7 @@
       <applyto>/apps/gnomemeeting/general/user_interface/calls_history_window/size</applyto>
       <owner>GnomeMeeting</owner>
       <type>string</type>
-      <default>330,225</default>
+      <default>380,425</default>
       <locale name="C">
 	<short>Size of the calls history window</short>
 	<long>Size of the calls history window</long>
